<resources>
    <string name="app_name">Ome</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_btn">Continue</string>
    <string name="scan_again">Scan Again</string>
    <string name="add_a_stove">Add a Stove</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="let_s_setup_your_account">Let\'s setup your account</string>
    <string name="email">Email</string>
    <string name="phone_prefix">+1</string>
    <string name="how_can_we_contact_you">How can we contact you?</string>
    <string name="we_don_t_spam_people_it_s_not_nice_phone_number_is_optional">We don\'t spam people, it\'s not nice. Phone number is optional</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="by_clicking_continue_and_creating_an_account_you_agree_to_ome_s_terms_of_service_and_privacy_policy">By clicking continue and creating an account, you agree to <a href="https://www.omekitchen.com/pages/terms">Ome\'s Terms of Service</a> and <a href="https://www.omekitchen.com/pages/privacy-policy"> Privacy Policy</a></string>
    <string name="by_clicking_continue">By clicking continue and creating an account, you agree to <a href="https://www.omekitchen.com/pages/terms">Ome\'s Terms of Service</a> and <a href="https://www.omekitchen.com/pages/privacy-policy"> Privacy Policy</a></string>
    <string name="by_clicking_continue2">By clicking continue, you agree to <a href="https://www.omekitchen.com/pages/terms">Ome\'s Terms of Service</a> and <a href="https://www.omekitchen.com/pages/privacy-policy"> Privacy Policy</a></string>
    <string name="password_rules">Password must have 9 characters or more and contains at least 3 of the following types: uppercase, lowercase, and number.</string>
    <string name="check_email_for_code">Check email for code</string>
    <string name="confirmation_label">Enter the code we sent to your email address %1$s</string>
    <string name="confirmation_label_dialog">Confirmation code sent via email your email address %1$s</string>
    <string name="verification_code">Verification Code</string>
    <string name="hyphen">-</string>
    <string name="zero">0</string>
    <string name="resend_after_sec">Resend after %1$s sec</string>
    <string name="resend_code">Resend Code</string>
    <string name="need_help">Need Help?</string>
    <string name="verify">Verify</string>
    <string name="hello">Hello!</string>
    <string name="welcome_to_ome">Welcome to Ome App\nTo use our app to manage.</string>
    <string name="now_let_s_get_information_about_your_stove">Now let\'s get information about your stove.</string>
    <string name="enter_email_to_reset_password">Enter email to reset password</string>
    <string name="password_reset">Your password was successfully reset.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="under_construction">Under construction</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_stove">My Stove</string>
    <string name="menu_members">Members</string>
    <string name="menu_profile">Profile</string>
    <string name="account">Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="membership">Membership</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="stove_setup_brand_label">What brand is your stove?</string>
    <string name="gas">Gas</string>
    <string name="electric">Electric</string>
    <string name="take_a_shalf_photo_desc1">Let\'s take a photo of your knob\nshaft</string>
    <string name="take_a_shalf_photo_desc2">Before taking a picture, make sure to take off one knob as shown below.</string>
    <string name="take_photo">Take a Photo</string>
    <string name="permission_denied">Permission not granted.</string>
    <string name="how_are_the_burners_on_your_stove_organized">How are the burners on your stove organized?</string>
    <string name="finish">Finish</string>
    <string name="stove_configuration_complete">Stove Configuration Complete</string>
    <string name="next_nlet_s_setup_your_smart_knob">Next,\nlet\'s setup your Smart Knob!</string>
    <string name="skip_knob_setup">Skip Knob Setup</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="show_more">Show More</string>
    <string name="send">Send</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="select_issue">Select Issue</string>
    <string name="auto_shut_off_settings">Auto Shut-Off</string>
    <string name="current_auto_shut_off_time">Current Auto Shut-Off Time</string>
    <string name="auto_shut_off_warning">Warning: Changes to the auto shut-off timer will apply to all ome knobs.</string>
    <string name="auto_shut_off_time_change">By clicking save you accept all responsibility for anything that may happen while your stove remains on what you change the auto shut-off timer.</string>
    <string name="change_auto_shut_off_time">Change Auto Shut-Off Time</string>
    <string name="auto_shut_off_time_change_confirmation">Are you sure you want to change the auto shut-off timer value?</string>
    <string name="warning">Warning</string>
    <string name="ome_knob_will_rotate">Ome Knob will now rotate itself through the settings. Hang tight! This may take a few seconds.</string>
    <string name="ome_knob_manually_turn_to_the_low">Manually rotate the knob to the LOW position of the Single burner</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="stove_information">Stove Information</string>
    <string name="change_stove_orientation">Change Stove Orientation</string>
    <string name="change_stove_type">Change Stove Type</string>
    <string name="name">Name</string>
    <string name="stove_image">Stove Image</string>
    <string name="choose_from_phone">Choose from Phone</string>
    <string name="device_settings">Device Settings</string>
    <string name="change_knob_position">Change Knob Position</string>
    <string name="change_wifi">Change Wifi</string>
    <string name="change_knob_orientation">Change Knob Orientation</string>
    <string name="knob_mac_addr_label">MAC ID: %1$s</string>
    <string name="physical_knob_installation">Physical Knob Installation</string>
    <string name="confirm_installation">Confirm that the Knob installation is completed correctly. The Knob Bottom should be secured to the stove shaft like this:</string>
    <string name="install_videos">Please complete the physical installation of your Smart Knob by following these installation instructions.\n\n\nConfirm that the Knob installation is completed correctly. The Knob Bottom should be secured to the stove shaft like this:</string>
    <string name="remove_the_Knob">Please remove the Knob Top and locate the QR code located on the backside. Proceed to the next step to scan the QR code and get your Smart Knob online.</string>
    <string name="your_stove">Your Stove</string>
    <string name="knob_position">Select Knob Position</string>
    <string name="which_burner_would_you_like_to_setup_your_smart_knob_on">Which burner would you like to setup your smart knob on?</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="knob_in_use">Another user owns this knob you\'ll need to select another or the user will need to remove the knob</string>
    <string name="knob_doesnt_exist">The scanned knob QR code does not exist.  Please try scanning again.  If the issue persists, contact support \n855–663–5227 \nsupport@omekitchen.com</string>
    <string name="scan_qr_code">Scan the QR code on the back of the Knob Top. To see the code, detach the Knob Top from the Knob Bottom. After the Wi-Fi connection is complete, you can re-attach.</string>
    <string name="let_s_connect_to_your_local_wi_fi_network">Let\'s connect to your Wi-Fi network.</string>
    <string name="before_we_connect_label">Before we connect your device to your Wi-Fi, let’s make sure your devices are on and ready.</string>
    <string name="are_your_device_on">Is your device on?</string>
    <string name="manual_connect">Manual Connect</string>
    <string name="yes_let_s_connect">Yes, Let\'s Continue</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="unable_to_join_the_network">Unable to join the networks <b>\"%1$s\"</b> and <b>\"%2$s\"</b></string>
    <string name="connect_to_your_wi_fi">Connect to your Wi-Fi</string>
    <string name="connect_your_phone_to_ome">Connect your phone to Ome</string>
    <string name="manual_setup1">Open Wi-Fi settings on your phone and select the network that says either:</string>
    <string name="or">or</string>
    <string name="manual_setup3">It might take a moment to show up. If asked for a password, enter <font color='#0e89b9'>\"password\"</font>. Once connected, return to this screen.</string>
    <string name="manual_connection_to_hotspot_error">The network you connected to is not the knob\'s network \"%1$s\" or \"%2$s\".</string>
    <string name="select_a_network_for_to_connect">Select a network to connect your knob.</string>
    <string name="ome_smart_knob_will_be_setup_on">Ome Smart Knob will be setup on</string>
    <string name="connect">Connect</string>
    <string name="incorrect_network_name_and_password">Incorrect network name or password.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="something_went_wrong_when_setting_the_knob">Something went wrong when setting the knob\'s Wi-Fi, please try again.</string>
    <string name="connection_success">Congratulations! Your knob is now connected to your Wi-Fi.</string>
    <string name="replace_knob_top">Replace Knob Top</string>
    <string name="replace_knob_label">Once, Wi-Fi connection is successful, re-attach the Knob Top to the Knob Bottom and continue.</string>
    <string name="confirm_that_you_have_completed_part_2">Confirm that you have completed Part 2. The knob should now be installed on your stove!</string>
    <string name="configure_knob">Configure Knob</string>
    <string name="direction_label">In what direction does your knob rotate when you turn it on?</string>
    <string name="device_calibration_off_label">Make sure your knob is in the <![CDATA[<b>Off</b>]]> position and press continue</string>
    <string name="device_calibration_label">Manually turn your knob to <![CDATA[<b>%1$s</b>]]> position and press continue</string>
    <string name="counter_clockwise">Counter Clockwise</string>
    <string name="clockwise">Clockwise</string>
    <string name="you_re_all_set">You\'re all set!</string>
    <string name="would_you_like_to_add_other_knobs_now">Would you like to add other Knobs now?</string>
    <string name="setup_another_knob">Setup Another Knob</string>
    <string name="i_m_done">I\'m Done</string>
    <string name="setup_completed">Setup Completed</string>
    <string name="close">close</string>
    <string name="logo">logo</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="auto_shutoff_time">Auto Shut-off Time</string>
</resources>