<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.dashboard.settings.add_knob.wifi.ConnectToWifiFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_dashboard"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/connect_to_your_wi_fi" />



    <TextView
        android:id="@+id/label1Tv"
        style="@style/Label.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_bar"
        android:text="@string/let_s_connect_to_your_local_wi_fi_network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_router"
        app:layout_constraintEnd_toEndOf="@+id/label1Tv"
        app:layout_constraintStart_toStartOf="@+id/label1Tv"
        app:layout_constraintTop_toBottomOf="@+id/label1Tv" />

    <TextView
        android:id="@+id/label2Tv"
        style="@style/Label.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/before_we_connect_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/label3Tv"
        style="@style/Label.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/are_your_device_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2Tv" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnManual"
        style="@style/OmeButton.Blue.Outline"
        android:text="@string/manual_connect"
        app:layout_constraintBottom_toTopOf="@+id/connectBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/connectBtn"
        style="@style/OmeButton.Blue"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/yes_let_s_connect"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2Tv"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
