<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.dashboard.settings.auto_shutoff.AutoShutOffSettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/auto_shut_off_settings"
        app:titleMargin="@dimen/_5sdp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_bar"
        android:contentDescription="@string/auto_shut_off_settings"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:endIconDrawable="@drawable/ic_arrow_selector"
        app:helperText="@string/auto_shut_off_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoShutOffSelector"
            style="@style/Label.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auto_shutoff_time"
            android:inputType="none"
            app:dropDownBackgroundTint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_marginBottom="@dimen/_8sdp"
        style="@style/Label.Medium"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_shut_off_time_change"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/saveBtn"
        style="@style/OmeButton.Blue"
        android:gravity="center"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
