<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <com.ome.app.presentation.views.camera.ImageViewZoom
        android:id="@+id/imageViewFullScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:fitsSystemWindows="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart"
            app:iconSize="@dimen/_22sdp"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownload"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/logo"
            app:icon="@drawable/ic_download"
            app:iconGravity="textStart"
            app:iconSize="@dimen/_22sdp"
            app:iconTint="@color/white" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/previous"
        android:padding="16dp"
        android:layout_gravity="center|start"
        android:src="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/next"
        android:layout_gravity="center|end"
        android:padding="16dp"
        android:src="@android:drawable/ic_media_next"/>

</FrameLayout>
