<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/titleTv"
        style="@style/Title.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/setup_completed"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/ome_gradient_background_checkmark"
        android:padding="6dp"
        android:src="@drawable/ic_check_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />


    <TextView
        android:id="@+id/textView8"
        style="@style/Label.18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/you_re_all_set"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/subLabelTv"
        style="@style/Label.18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/would_you_like_to_add_other_knobs_now"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/setupAnotherKnobBtn"
        style="@style/OmeButton.Blue"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/setup_another_knob"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/imDoneBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subLabelTv"
        app:layout_constraintVertical_bias="1.0" />

    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/imDoneBtn"
        style="@style/OmeButton.Blue.Outline"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:visibility="visible"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/i_m_done"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
