<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.dashboard.profile.change_password.ChangePasswordFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_dashboard"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/change_password" />

    <TextView
        android:id="@+id/passwordRules"
        style="@style/Label.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_bar"
        android:clickable="true"
        android:focusable="true"
        android:justificationMode="inter_word"
        android:text="@string/password_rules"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        tools:targetApi="26" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPasswordLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontal"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRules"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPassword"
            style="@style/Label.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textSize="@dimen/field_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassword"
            style="@style/Label.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:textSize="@dimen/field_text_size" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/termsAndConditions"
        style="@style/Label.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/by_clicking_continue"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toEndOf="@+id/continueBtn"
        app:layout_constraintStart_toStartOf="@+id/continueBtn" />

    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/continueBtn"
        style="@style/OmeButton.Blue"
        android:layout_marginTop="18dp"
        android:elevation="0dp"
        android:text="@string/continue_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <include-->
    <!--        android:id="@+id/loadingLayout"-->
    <!--        layout="@layout/loading_progress_layout"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
