<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.dashboard.settings.add_knob.direction.DirectionSelectionFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/configure_knob" />


    <TextView
        android:id="@+id/labelTv"
        style="@style/Title.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_bar"
        android:text="@string/direction_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />


    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/continueBtn"
        style="@style/OmeButton.Blue"
        android:enabled="false"
        android:text="@string/continue_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/counterClockWiseRl"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/clockWiseRl"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTv">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_counter_clock" />

        <ImageView
            android:id="@+id/counterClockWiseCoverIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_zone_cover_layer" />
    </RelativeLayout>


    <TextView
        android:id="@+id/counterClockwiseTv"
        style="@style/Label.16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/counter_clockwise"
        app:layout_constraintEnd_toEndOf="@+id/counterClockWiseRl"
        app:layout_constraintStart_toStartOf="@+id/counterClockWiseRl"
        app:layout_constraintTop_toBottomOf="@+id/counterClockWiseRl" />


    <RelativeLayout
        android:id="@+id/clockWiseRl"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/counterClockWiseRl"
        app:layout_constraintTop_toBottomOf="@+id/labelTv">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_clockwise" />

        <ImageView
            android:id="@+id/clockWiseCoverIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_zone_cover_layer" />
    </RelativeLayout>

    <TextView
        android:id="@+id/clockwiseTv"
        style="@style/Label.16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/clockwise"
        app:layout_constraintEnd_toEndOf="@+id/clockWiseRl"
        app:layout_constraintStart_toEndOf="@+id/counterClockWiseRl"
        app:layout_constraintTop_toBottomOf="@+id/counterClockWiseRl" />



</androidx.constraintlayout.widget.ConstraintLayout>
